--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@tanstack/react-query": "^5.90.11",
     "ai": "^5.0.104",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "next": "16.0.6",
